finish about us section

--- a/index.html
+++ b/index.html
@@ -17,197 +17,57 @@
 <body>
   <nav class="nav-extended">
     <div class="nav-wrapper">
-      <a href="#" class="brand-logo">CODING Blocks</a>
+      <a href="./index.html" class="brand-logo">CODING Blocks</a>
       <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a href="sponsors.html">Sponsorship</a></li>
-        <li><a href="merchandise.html">Merchandise</a></li>
-        <li><a href="contact.html">Contact Us</a></li>
+        <li><a href="./pages/sponsors.html">Sponsorship</a></li>
+        <li><a href="./pages/merchandise.html">Merchandise</a></li>
+        <li><a href="./pages/aboutus.html">About Us</a></li>
+        <li><a href="./pages/contact.html">Contact</a></li>
       </ul>
     </div>
     <div class="nav-content">
       <ul class="tabs tabs-transparent row">
-        <li class="tab col s2"><a href="#home" class="active">Home</a></li>
+        <li class="tab col s2 active"><a href="#home">Home</a></li>
         <li class="tab col s2"><a href="#podcasts">Podcasts</a></li>
         <li class="tab col s2"><a href="#videos">Videos</a></li>
         <li class="tab col s2"><a href="#tipsandtricks">Tips and Tricks</a></li>
         <li class="tab col s2"><a href="#articles">Articles</a></li>
         <li class="tab col s2"><a href="#resources">Resources</a></li>
-        <li class="tab col s2"><a href="#aboutUs">About Us</a></li>
       </ul>
     </div>
   </nav>
 
   <ul class="sidenav" id="mobile-demo">
-    <li><a href="sponsors.html">Sponsorship</a></li>
-    <li><a href="merchandise.html">Merchandise</a></li>
-    <li><a href="contact.html">Contact Us</a></li>
+    <li><a href="./pages/sponsors.html">Sponsorship</a></li>
+    <li><a href="./pages/merchandise.html">Merchandise</a></li>
+    <li><a href="./pages/aboutus.html">About Us</a></li>
+    <li><a href="./pages/contact.html">Contact</a></li>
   </ul>
 
   <!--Home Page: Info about the blog AND About US section-->
   <div id="home">
-
-    <section id="title_div">
+    <section class="card" id="title_div">
       <h1 id="title">CodingBlocks.Net</h1>
-      <blockquote>A Podcast and Your Source to Learn How To Become a Better Programmer </blockquote>
+      <blockquote>We are a podcast that covers a wide variety
+        of topics that range from good programming practices to specifics for particular
+        languages.</blockquote>
+      <h5>Hosted by: Allen Underwood, Joe Zack and Michael Outlaw.</h5>
     </section>
 
+    <section id="recommendation_div">
+      <h4 class="other_titles">Some of our popular episodes are ... </h4>
+
+     <div class="card">
+       
+     </div>
+    </section>
   </div>
   <div id="podcasts">Podcasts</div>
   <div id="videos">Videos Hello?</div>
   <div id="tipsandtricks">Tips and Tricks</div>
   <div id="articles">Articles</div>
   <div id="resources">Resources</div>
-  <div id="aboutUs">
-    <section id="aboutUs">
-      <div id="about_us_title">
-        <h3>About Us</h3>
-      </div>
-    
-      <div id="timeline">
-        <!--Allen Underwood-->
-        <div class="timeline_card_div">
-          <div class="card">
-            <div class="profile_photo card-image">
-              <img src="./img/profile_photo.png" alt="">
-            </div>
-            <div class="inner_card z-depth-1">
-              <div class="name">
-                <h5 class="first_name">Allen</h5>
-                <h5 class="last_name">UNDERWOOD</h5>
-              </div>
-              <div class="divider"></div>
-              <div class="links_wrapper">
-                <ul>
-                  <li><a href="https://twitter.com/theallenu" target="_blank"><img src="./img/twitter.png"
-                        alt="twitter_link" class="socialnetwork_link"></a></li>
-                  <li><a href="https://www.linkedin.com/in/allenunderwood" target="_blank"><img src="./img/linkedin.png"
-                        alt="linkedin_link" class="socialnetwork_link"></a></li>
-                  <li><a href="http://www.untetheredincome.com/" target="_blank"><img src="./img/round.png"
-                        alt="untetheredincome_link" class="socialnetwork_link"></a></li>
-                  <li><a href="http://www.headphonereviewhq.com/" target="_blank"><img src="./img/blogger.png"
-                        alt="headphonereviewhq_link" class="socialnetwork_link"></a></li>
-                </ul>
-              </div>
-            </div>
-            <div class="carousel carousel-slider center">
-              <div class="carousel-item" href="#one!">
-                <p class="right_side_paragraph left-align">Allen has been a professional programmer who began his life
-                  of coding
-                  at the ripe age of 14 when he
-                  began writing code to do his math homework on the handheld TRS-80 (in Basic) given to him by his
-                  uncle.</p>
-              </div>
-              <div class="carousel-item" href="#two!">
-                <p class="right_side_paragraph left-align">
-                  Professionally he has specialized in web specific programming for 15 years creating solutions for
-                  Fortune 100 companies. Allen is proficient in database design and performance tuning and has
-                  specialized in developing robust user interfaces using the latest Javascript and web technologies.
-                </p>
-              </div>
-              <div class="carousel-item" href="#three!">
-                <p class="right_side_paragraph left-align">In his “spare” time, he loves to spend time with his wife,
-                  twins and
-                  chihuahuas. As well as being a
-                  programmer, husband and father, he also dabbles in video production, runs a headphone review site,
-                  plays basketball when he can, and likes to be humbled by the younger generation in matches of the
-                  latest Call of Duty games.</p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!--Joe Zack-->
-        <div class="timeline_card_div">
-          <div class="card">
-            <div class="profile_photo card-image">
-              <img src="./img/profile_photo.png" alt="">
-            </div>
-            <div class="inner_card z-depth-1">
-              <div class="name">
-                <h5 class="first_name">Joe</h5>
-                <h5 class="last_name">ZACK</h5>
-              </div>
-              <div class="divider"></div>
-              <div class="links_wrapper">
-                <ul>
-                  <li><a href="www.linkedin.com/in/joezack" target="_blank"><img src="./img/linkedin.png"
-                        alt="linkedin_link" class="socialnetwork_link"></a></li>
-                  <li><a href="http://joezack.com/" target="_blank"><img src="./img/blogger.png"
-                        alt="headphonereviewhq_link" class="socialnetwork_link"></a></li>
-                  <li><a href="https://twitter.com/thejoezack" target="_blank"><img src="./img/twitter.png"
-                        alt="twitter_link" class="socialnetwork_link"></a></li>
-                </ul>
-              </div>
-            </div>
-            <div class="carousel carousel-slider center">
-              <div class="carousel-item" href="#one!">
-                <p class="right_side_paragraph left-align">Joe is a Software Developer based in the Central Florida. If it
-                  weren’t for ticketing systems he would gladly refactor
-                  himself in circles all day long.</p>
-              </div>
-              <div class="carousel-item" href="#two!">
-                <p class="right_side_paragraph left-align">
-                  These days Joe is excited about JavaScript, Search Engines, and C#.
-                </p>
-              </div>
-              <div class="carousel-item" href="#three!">
-                <p class="right_side_paragraph left-align">When he is not basking in the glow of a monitor you can find
-                  hanging out with his wife, doggies, and kitties.</p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!--Michael Outlaw-->
-        <div class="timeline_card_div">
-          <div class="card">
-            <div class="profile_photo card-image">
-              <img src="./img/profile_photo.png" alt="">
-            </div>
-            <div class="inner_card z-depth-1">
-              <div class="name">
-                <h5 class="first_name">Michael</h5>
-                <h5 class="last_name">OUTLAW</h5>
-              </div>
-              <div class="divider"></div>
-              <div class="links_wrapper">
-                <ul>
-                  <li><a href="www.linkedin.com/in/michaeloutlaw" target="_blank"><img src="./img/linkedin.png"
-                        alt="linkedin_link" class="socialnetwork_link"></a></li>
-                  <li><a href="https://twitter.com/iamwaltuo" target="_blank"><img src="./img/twitter.png"
-                        alt="twitter_link" class="socialnetwork_link"></a></li>
-                </ul>
-              </div>
-            </div>
-            <div class="carousel carousel-slider center">
-              <div class="carousel-item" href="#one!">
-                <p class="right_side_paragraph left-align">Michael Outlaw is a father, husband, and software developer based
-                  out of Atlanta, GA. A fan of gadgets and all things
-                  technology, when he isn’t found behind the clickety clack of his favorite keyboard he’s usually found on a
-                  bicycle or
-                  tennis court.</p>
-              </div>
-              <div class="carousel-item" href="#two!">
-                <p class="right_side_paragraph left-align">
-                  A father of two boys, Michael often spends his free time teaching his boys how to lose with dignity as
-                  they destroy him
-                  in game franchises like Halo and Call of Duty.
-                </p>
-              </div>
-              <div class="carousel-item" href="#three!">
-                <p class="right_side_paragraph left-align">When not sharing his love of Git, C#, and unit testing, he can be
-                  found spending his “study time” studying the mysteries
-                  of machine learning.</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-  </div>
-
-
-
 
 
   <!--JavaScript at end of body for optimized loading-->
