--- a/index.html
+++ b/index.html
@@ -58,9 +58,73 @@
     <section id="recommendation_div">
       <h4 class="other_titles">Some of our popular episodes are ... </h4>
 
-     <div class="card">
-       
-     </div>
+      <ul class="collapsible expandable">
+        <li>
+          <div class="collapsible-header"><i class="large material-icons">keyboard_arrow_down</i>Google's Engineering
+            Practices<span class="new badge" data-badge-caption="episodes">3</span></div>
+          <div class="collapsible-body">
+            <ul>
+              <li class="waves-effect waves-teal waves-ripple playlist_inner_titles">Code Review Standard</li>
+              <div class="divider"></div>
+              <li class="waves-effect waves-teal waves-ripple playlist_inner_titles">What to Look For in a Code Review
+              </li>
+              <div class="divider"></div>
+              <li class="waves-effect waves-teal waves-ripple playlist_inner_titles">How to Navigate a Code Review</li>
+            </ul>
+          </div>
+        </li>
+        <li>
+          <div class="collapsible-header"><i class="large material-icons">keyboard_arrow_down</i>
+          Designing Data-Intensive Applications<span class="new badge" data-badge-caption="episodes">9</span></div>
+          <div class="collapsible-body">
+            <ul>
+              <li class="waves-effect waves-teal waves-ripple playlist_inner_titles">Reliability</li>
+              <div class="divider"></div>
+              <li class="waves-effect waves-teal waves-ripple playlist_inner_titles">Scalability
+              </li>
+              <div class="divider"></div>
+              <li class="waves-effect waves-teal waves-ripple playlist_inner_titles">Maintainability
+              </li>
+              <div class="divider"></div>
+              <li class="waves-effect waves-teal waves-ripple playlist_inner_titles">Data Models: Relational vs Document
+              </li>
+              <div class="divider"></div>
+              <li class="waves-effect waves-teal waves-ripple playlist_inner_titles">Data Models: Relationships
+              </li>
+              <div class="divider"></div>
+              <li class="waves-effect waves-teal waves-ripple playlist_inner_titles">Data Models: Query Languages
+              </li>
+              <div class="divider"></div>
+              <li class="waves-effect waves-teal waves-ripple playlist_inner_titles">Storage and Retrieval
+              </li>
+              <div class="divider"></div>
+              <li class="waves-effect waves-teal waves-ripple playlist_inner_titles">SSTables and LSM-Trees
+              </li>
+              </li>
+              <div class="divider"></div>
+              <li class="waves-effect waves-teal waves-ripple playlist_inner_titles">To B-Tree or not to B-Tree</li>
+            </ul>
+          </div>
+        </li>
+        <li>
+          <div class="collapsible-header"><i class="large material-icons">keyboard_arrow_down</i>Developer Shopping Spree
+            <span class="new badge" data-badge-caption="episodes">4</span></div>
+          <div class="collapsible-body">
+            <ul>
+              <li class="waves-effect waves-teal waves-ripple playlist_inner_titles">Developer Shopping Spree 2017</li>
+              <div class="divider"></div>
+              <li class="waves-effect waves-teal waves-ripple playlist_inner_titles">Developer Shopping Spree 2018</li>
+              <div class="divider"></div>
+              <li class="waves-effect waves-teal waves-ripple playlist_inner_titles">Developer Shopping Spree 2019</li>
+              <div class="divider"></div>
+              <li class="waves-effect waves-teal waves-ripple playlist_inner_titles">Developer Shopping Spree 2020
+              </li>
+            </ul>
+          </div>
+        </li>
+      </ul>
+
+
     </section>
   </div>
   <div id="podcasts">Podcasts</div>
