add partially finished FABs and some text highlight

--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=l, initial-scale=1.0">
     <title>About Us</title>
     <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
 <body>
     <nav class="nav-extended">
@@ -44,7 +45,7 @@
         <div id="timeline">
             <!--Allen Underwood-->
             <div class="timeline_card_div">
-                <div class="card">
+                <div class="card" data-aos="fade-left">
                     <div class="profile_photo card-image">
                         <img src="../img/profile_photo.png" alt="">
                     </div>
@@ -63,8 +64,9 @@
                                 </li>
                                 <li><a href="http://www.untetheredincome.com/" target="_blank"><img src="../img/round.png"
                                             alt="untetheredincome_link" class="socialnetwork_link"></a></li>
-                                <li><a href="http://www.headphonereviewhq.com/" target="_blank"><img src="../img/blogger.png"
-                                            alt="headphonereviewhq_link" class="socialnetwork_link"></a></li>
+                                <li><a href="http://www.headphonereviewhq.com/" target="_blank"><img
+                                            src="../img/blogger.png" alt="headphonereviewhq_link"
+                                            class="socialnetwork_link"></a></li>
                             </ul>
                         </div>
                     </div>
@@ -73,17 +75,20 @@
                             <p class="right_side_paragraph left-align">Allen has been a professional programmer who began
                                 his life
                                 of coding
-                                at the ripe age of 14 when he
+                                <a href="#" class="highlight_min">at the ripe age of 14</a> when he
                                 began writing code to do his math homework on the handheld TRS-80 (in Basic) given to him by
                                 his
                                 uncle.</p>
                         </div>
                         <div class="carousel-item" href="#two!">
                             <p class="right_side_paragraph left-align">
-                                Professionally he has specialized in web specific programming for 15 years creating
+                                Professionally he has specialized in <a href="#" class="highlight_min">web specific
+                                    programming</a> for 15 years creating
                                 solutions for
-                                Fortune 100 companies. Allen is proficient in database design and performance tuning and has
-                                specialized in developing robust user interfaces using the latest Javascript and web
+                                Fortune 100 companies. Allen is proficient in <a href="#" class="highlight_full">database
+                                    design</a> and<a href="#" class="highlight_full"> performance tuning</a> and has
+                                specialized in developing robust <a href="#" class="highlight_full">user interfaces</a>
+                                using the latest Javascript and web
                                 technologies.
                             </p>
                         </div>
@@ -103,7 +108,7 @@
             </div>
             <!--Joe Zack-->
             <div class="timeline_card_div">
-                <div class="card">
+                <div class="card" data-aos="fade-right">
                     <div class="profile_photo card-image">
                         <img src="../img/profile_photo.png" alt="">
                     </div>
@@ -133,7 +138,9 @@
                         </div>
                         <div class="carousel-item" href="#two!">
                             <p class="right_side_paragraph left-align">
-                                These days Joe is excited about JavaScript, Search Engines, and C#.
+                                These days Joe is excited about <a href="#" class="highlight_full">JavaScript</a>, <a
+                                    href="#" class="highlight_min">Search Engines</a>, and <a href="#"
+                                    class="highlight_full">C#</a>.
                             </p>
                         </div>
                         <div class="carousel-item" href="#three!">
@@ -146,7 +153,7 @@
             </div>
             <!--Michael Outlaw-->
             <div class="timeline_card_div">
-                <div class="card">
+                <div class="card" data-aos="fade-left">
                     <div class="profile_photo card-image">
                         <img src="../img/profile_photo.png" alt="">
                     </div>
@@ -167,14 +174,16 @@
                         </div>
                     </div>
                     <div class="carousel carousel-slider center">
-                        <div class="carousel-item" href="#one!">
+                        <div class="carousel-item" href="#one!" >
                             <p class="right_side_paragraph left-align">Michael Outlaw is a father, husband, and software
                                 developer based
-                                out of Atlanta, GA. A fan of gadgets and all things
-                                technology, when he isn’t found behind the clickety clack of his favorite keyboard he’s
+                                out of Atlanta, GA. <a href="#" class="highlight_min">A fan of gadgets and all things
+                                    technology</a>, when he isn’t found behind the clickety clack of his favorite keyboard
+                                he’s
                                 usually found on a
                                 bicycle or
                                 tennis court.</p>
+                            <p id="background_text_MO">RGB <br>ALL THE THINGS!</p>
                         </div>
                         <div class="carousel-item" href="#two!">
                             <p class="right_side_paragraph left-align">
@@ -184,9 +193,11 @@
                                 in game franchises like Halo and Call of Duty.
                             </p>
                         </div>
-                        <div class="carousel-item" href="#three!">
-                            <p class="right_side_paragraph left-align">When not sharing his love of Git, C#, and unit
-                                testing, he can be
+                        <div class="carousel-item"  id="Michael_Three">
+                            <p class="right_side_paragraph left-align">When not sharing his love of <a href="#"
+                                    class="highlight_min">Git</a>, <a href="#" class="highlight_full">C#</a>, and <a
+                                    href="#" class="highlight_min">unit
+                                    testing</a>, he can be
                                 found spending his “study time” studying the mysteries
                                 of machine learning.</p>
                         </div>
@@ -200,5 +211,11 @@
     <!--JavaScript at end of body for optimized loading-->
     <script type="text/javascript" src="../app.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        AOS.init({
+            duration: 1200
+        });
+    </script>
 </body>
 </html>
