--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <!--Import materialize.css-->
   <link type="text/css" rel="stylesheet" href="css/main.css" media="screen,projection" />
+  <!--AOS library-->
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
 
   <!--Let browser know website is optimized for mobile-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -47,10 +50,10 @@
 
   <!--Home Page: Info about the blog AND About US section-->
   <div id="home">
-    <section class="card" id="title_div">
+    <section id="title_div" class="card" data-aos="fade">
       <h1 id="title">CodingBlocks.Net</h1>
-      <blockquote>We are a podcast that covers a wide variety
-        of topics that range from good programming practices to specifics for particular
+      <blockquote>A podcast that covers a wide variety
+        of topics that range from general programming practices to specifics for particular
         languages.</blockquote>
       <h5>Hosted by: Allen Underwood, Joe Zack and Michael Outlaw.</h5>
     </section>
@@ -134,9 +137,31 @@
   <div id="resources">Resources</div>
 
 
+
+
+  <!--FLOATING BUTTION IS HERE!!! -->
+  <div class="fixed-action-btn">
+    <a class="btn-floating btn-large tooltipped" data-position="left" data-tooltip="Follow US Here">
+      <i class="large material-icons">more_horiz</i>
+    </a>
+    <ul>
+      <li><img src="./img/FAB icons/apple_podcast.png" class="btn-floating sub_btn" alt=""></li>
+      <li><img src="./img/FAB icons/reddit.png" class="btn-floating sub_btn" alt=""></li>
+      <li><img src="./img/FAB icons/spotify.png" class="btn-floating sub_btn" alt=""></li>
+      <li><img src="./img/FAB icons/twitter.png" class="btn-floating sub_btn" alt=""></li>
+      <li><img src="./img/FAB icons/youtube.png" class="btn-floating sub_btn" alt=""></li>
+    </ul>
+  </div>
+
   <!--JavaScript at end of body for optimized loading-->
   <script type="text/javascript" src="app.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script>
+    AOS.init({
+       duration: 1000
+    });
+  </script>
 
 
 </body>
