finish articles section

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
   <nav class="nav-extended">
     <div class="nav-wrapper">
-      <a href="./index.html" class="brand-logo">CODING Blocks</a>
+      <a href="./index.html" class="brand-logo">CODINGBlocks</a>
       <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
         <li><a href="./pages/sponsors.html">Sponsorship</a></li>
@@ -58,7 +58,7 @@
       <h5>Hosted by: Allen Underwood, Joe Zack and Michael Outlaw.</h5>
     </section>
 
-    <section id="recommendation_div">
+    <section id="episode_div">
       <h4 class="other_titles">Some of our popular episodes are ... </h4>
 
       <ul class="collapsible expandable">
@@ -78,7 +78,7 @@
         </li>
         <li>
           <div class="collapsible-header"><i class="large material-icons">keyboard_arrow_down</i>
-          Designing Data-Intensive Applications<span class="new badge" data-badge-caption="episodes">9</span></div>
+            Designing Data-Intensive Applications<span class="new badge" data-badge-caption="episodes">9</span></div>
           <div class="collapsible-body">
             <ul>
               <li class="waves-effect waves-teal waves-ripple playlist_inner_titles">Reliability</li>
@@ -103,32 +103,147 @@
               <div class="divider"></div>
               <li class="waves-effect waves-teal waves-ripple playlist_inner_titles">SSTables and LSM-Trees
               </li>
-              </li>
-              <div class="divider"></div>
-              <li class="waves-effect waves-teal waves-ripple playlist_inner_titles">To B-Tree or not to B-Tree</li>
-            </ul>
-          </div>
         </li>
-        <li>
-          <div class="collapsible-header"><i class="large material-icons">keyboard_arrow_down</i>Developer Shopping Spree
-            <span class="new badge" data-badge-caption="episodes">4</span></div>
-          <div class="collapsible-body">
-            <ul>
-              <li class="waves-effect waves-teal waves-ripple playlist_inner_titles">Developer Shopping Spree 2017</li>
-              <div class="divider"></div>
-              <li class="waves-effect waves-teal waves-ripple playlist_inner_titles">Developer Shopping Spree 2018</li>
-              <div class="divider"></div>
-              <li class="waves-effect waves-teal waves-ripple playlist_inner_titles">Developer Shopping Spree 2019</li>
-              <div class="divider"></div>
-              <li class="waves-effect waves-teal waves-ripple playlist_inner_titles">Developer Shopping Spree 2020
-              </li>
-            </ul>
-          </div>
+        <div class="divider"></div>
+        <li class="waves-effect waves-teal waves-ripple playlist_inner_titles">To B-Tree or not to B-Tree</li>
+      </ul>
+  </div>
+  </li>
+  <li>
+    <div class="collapsible-header"><i class="large material-icons">keyboard_arrow_down</i>Developer Shopping Spree
+      <span class="new badge" data-badge-caption="episodes">4</span></div>
+    <div class="collapsible-body">
+      <ul>
+        <li class="waves-effect waves-teal waves-ripple playlist_inner_titles">Developer Shopping Spree 2017</li>
+        <div class="divider"></div>
+        <li class="waves-effect waves-teal waves-ripple playlist_inner_titles">Developer Shopping Spree 2018</li>
+        <div class="divider"></div>
+        <li class="waves-effect waves-teal waves-ripple playlist_inner_titles">Developer Shopping Spree 2019</li>
+        <div class="divider"></div>
+        <li class="waves-effect waves-teal waves-ripple playlist_inner_titles">Developer Shopping Spree 2020
         </li>
       </ul>
+    </div>
+  </li>
+  </ul>
+  </section>
+
+  <section id="articles_div">
+    <h4 class="other_titles">Latest articles </h4>
+    <div class="card" id="articles_main_grid">
+      <div class="card sticky-action articles_sub_item hoverable">
+        <div class="card-image waves-effect waves-block waves-light">
+          <img class="activator" src="./img/card_bg1.jpg">
+        </div>
+        <div class="card-content">
+          <span class="card-title activator article_card_title"><i
+              class="material-icons right">more_vert</i>Getting started with Apache Beam and Kotlin</span>
+        </div>
+        <div class="card-reveal">
+          <h4 class="card-title article_card_title">Getting started with Apache Beam and Kotlin<i
+              class="material-icons right">close</i></h4>
+              <div class="divider"></div>
+          <p class="article_summary">Are you looking for a simple getting started guide for working with Kotlin and Apache Beam? Well
+            congratulations, you
+            are in the right place. I’ve been doing some live coding on the subject, and I made a teeny tiny project to
+            help me get
+            started on new Beam projects quicker.</p>
+        </div>
+        <div class="card-action">
+          <a href="#" class="card_link">Read More</a>
+        </div>
+      </div>
+
+      <div class="card sticky-action articles_sub_item hoverable">
+        <div class="card-image waves-effect waves-block waves-light">
+          <img class="activator" src="./img/card_bg2.jpg">
+        </div>
+        <div class="card-content">
+          <span class="card-title activator"><i class="material-icons right">more_vert</i>The Best Dev Audiobooks</span>
+        </div>
+        <div class="card-reveal">
+          <span class="card-title">The Best Dev Audiobooks<i class="material-icons right">close</i></span>
+          <div class="divider"></div>
+          <p class="article_summary">I’m a big fan of audio learning, and of course there are tons of great, free, dev podcasts but did you know that there
+          are quite a few great audiobooks for devs as well?</p>
+          <p class="article_summary">
+          I’ve been a subscriber to Audible.com (and yes, these are affiliate links below) for a long time, but they have only
+          recently started adding the types of programming books that I liked to read. I’ve kept track of the Audiobooks that I’ve
+          picked up that intersect with books you frequently see on “best of ” lists. I’m proud to say I’m 6.5/7 through the list
+          already and I’ve got the next one already on deck!</p>
+        </div>
+        <div class="card-action">
+          <a href="#" class="card_link">Read More</a>
+        </div>
+      </div>
+
+      <div class="card sticky-action articles_sub_item hoverable">
+        <div class="card-image waves-effect waves-block waves-light">
+          <img class="activator" src="./img/card_bg3.jpg">
+        </div>
+        <div class="card-content">
+          <span class="card-title activator"><i class="material-icons right">more_vert</i>Know When to Roll Your Own or Add a Tool to Your Toolbox</span>
+        </div>
+        <div class="card-reveal">
+          <span class="card-title">Know When to Roll Your Own or Add a Tool to Your Toolbox<i class="material-icons right">close</i></span>
+          <div class="divider"></div>
+          <p class="article_summary">By no means have I seen everything there is to see in the world of development, but I have been around long enough to
+          see the change from needing a single database which housed all your data, to this world where there’s SO MUCH data that
+          you couldn’t possibly store it all in a single database, on a single server, or in many cases, not a dozen servers.</p>
+        </div>
+        <div class="card-action">
+          <a href="#" class="card_link">Read More</a>
+        </div>
+      </div>
+
+      <div class="card sticky-action articles_sub_item hoverable">
+        <div class="card-image waves-effect waves-block waves-light">
+          <img class="activator" src="./img/card_bg4.jpg">
+        </div>
+        <div class="card-content">
+          <span class="card-title activator"><i class="material-icons right">more_vert</i>My 2020 (Dev|Re)solutions</span>
+        </div>
+        <div class="card-reveal">
+          <span class="card-title">My 2020 (Dev|Re)solutions<i class="material-icons right">close</i></span>
+          <div class="divider"></div>
+          <p class="article_summary">New Year’s is my favorite holiday because I find the notion of periodic renewal invigorating. Let that old lasagna be
+          forgot, I want to move forward! Overall, I was pretty happy with how my technical skills progressed last year, but I
+          think I can do better. Much better.</p>
+          <p class="article_summary">
+          This year I’m done trying to micromanage my future with limited information. I want to keep things simple by setting a
+          high level focus and prioritizing habits over static goals.</p>
+        </div>
+        <div class="card-action">
+          <a href="#" class="card_link">Read More</a>
+        </div>
+      </div>
+    </div>
+  </section>
+
+<section id="search_field">
+        <h4 class="other_titles">Search Coding Blocks</h4>
+
+    <nav>
+      <div class="nav-wrapper">
+        <form>
+          <div class="input-field">
+            <input id="search" type="search" required>
+            <label class="label-icon" for="search"><i class="material-icons">search</i></label>
+            <i class="material-icons">close</i>
+          </div>
+        </form>
+      </div>
+    </nav>
+</section>
+
+<section id="affiliate_field">
+          <h4 class="other_titles">Support the Show</h4>
+<div>
+  <h4>Here is the affiliate link LOL</h4>
+</div>
+</section>
 
 
-    </section>
   </div>
   <div id="podcasts">Podcasts</div>
   <div id="videos">Videos Hello?</div>
@@ -145,11 +260,11 @@
       <i class="large material-icons">more_horiz</i>
     </a>
     <ul>
-      <li><img src="./img/FAB icons/apple_podcast.png" class="btn-floating sub_btn" alt=""></li>
-      <li><img src="./img/FAB icons/reddit.png" class="btn-floating sub_btn" alt=""></li>
-      <li><img src="./img/FAB icons/spotify.png" class="btn-floating sub_btn" alt=""></li>
-      <li><img src="./img/FAB icons/twitter.png" class="btn-floating sub_btn" alt=""></li>
-      <li><img src="./img/FAB icons/youtube.png" class="btn-floating sub_btn" alt=""></li>
+      <li><img src="./img/FAB icons/apple1.png" class="btn-floating btn-large sub_btn" alt=""></li>
+      <li><img src="./img/FAB icons/reddit1.png" class="btn-floating btn-large sub_btn" alt=""></li>
+      <li><img src="./img/FAB icons/spotify1.png" class="btn-floating btn-large sub_btn" alt=""></li>
+      <li><img src="./img/FAB icons/twitter1.png" class="btn-floating btn-large sub_btn" alt=""></li>
+      <li><img src="./img/FAB icons/youtube1.png" class="btn-floating btn-large sub_btn" alt=""></li>
     </ul>
   </div>
 
@@ -159,7 +274,7 @@
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
   <script>
     AOS.init({
-       duration: 1000
+      duration: 1000
     });
   </script>
 
