--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -45,7 +45,7 @@
         <div id="timeline">
             <!--Allen Underwood-->
             <div class="timeline_card_div">
-                <div class="card" data-aos="fade-left">
+                <div class="card business_card" data-aos="fade-left">
                     <div class="profile_photo card-image">
                         <img src="../img/profile_photo.png" alt="">
                     </div>
@@ -108,7 +108,7 @@
             </div>
             <!--Joe Zack-->
             <div class="timeline_card_div">
-                <div class="card" data-aos="fade-right">
+                <div class="card business_card" data-aos="fade-right">
                     <div class="profile_photo card-image">
                         <img src="../img/profile_photo.png" alt="">
                     </div>
@@ -153,7 +153,7 @@
             </div>
             <!--Michael Outlaw-->
             <div class="timeline_card_div">
-                <div class="card" data-aos="fade-left">
+                <div class="card business_card" data-aos="fade-left">
                     <div class="profile_photo card-image">
                         <img src="../img/profile_photo.png" alt="">
                     </div>
@@ -183,7 +183,6 @@
                                 usually found on a
                                 bicycle or
                                 tennis court.</p>
-                            <p id="background_text_MO">RGB <br>ALL THE THINGS!</p>
                         </div>
                         <div class="carousel-item" href="#two!">
                             <p class="right_side_paragraph left-align">
