--- a/index.html
+++ b/index.html
@@ -136,14 +136,15 @@
           <img class="activator" src="./img/card_bg1.jpg">
         </div>
         <div class="card-content">
-          <span class="card-title activator article_card_title"><i
-              class="material-icons right">more_vert</i>Getting started with Apache Beam and Kotlin</span>
+          <span class="card-title activator article_card_title"><i class="material-icons right">more_vert</i>Getting
+            started with Apache Beam and Kotlin</span>
         </div>
         <div class="card-reveal">
           <h4 class="card-title article_card_title">Getting started with Apache Beam and Kotlin<i
               class="material-icons right">close</i></h4>
-              <div class="divider"></div>
-          <p class="article_summary">Are you looking for a simple getting started guide for working with Kotlin and Apache Beam? Well
+          <div class="divider"></div>
+          <p class="article_summary">Are you looking for a simple getting started guide for working with Kotlin and
+            Apache Beam? Well
             congratulations, you
             are in the right place. I’ve been doing some live coding on the subject, and I made a teeny tiny project to
             help me get
@@ -164,13 +165,17 @@
         <div class="card-reveal">
           <span class="card-title">The Best Dev Audiobooks<i class="material-icons right">close</i></span>
           <div class="divider"></div>
-          <p class="article_summary">I’m a big fan of audio learning, and of course there are tons of great, free, dev podcasts but did you know that there
-          are quite a few great audiobooks for devs as well?</p>
+          <p class="article_summary">I’m a big fan of audio learning, and of course there are tons of great, free, dev
+            podcasts but did you know that there
+            are quite a few great audiobooks for devs as well?</p>
           <p class="article_summary">
-          I’ve been a subscriber to Audible.com (and yes, these are affiliate links below) for a long time, but they have only
-          recently started adding the types of programming books that I liked to read. I’ve kept track of the Audiobooks that I’ve
-          picked up that intersect with books you frequently see on “best of ” lists. I’m proud to say I’m 6.5/7 through the list
-          already and I’ve got the next one already on deck!</p>
+            I’ve been a subscriber to Audible.com (and yes, these are affiliate links below) for a long time, but they
+            have only
+            recently started adding the types of programming books that I liked to read. I’ve kept track of the
+            Audiobooks that I’ve
+            picked up that intersect with books you frequently see on “best of ” lists. I’m proud to say I’m 6.5/7
+            through the list
+            already and I’ve got the next one already on deck!</p>
         </div>
         <div class="card-action">
           <a href="#" class="card_link">Read More</a>
@@ -182,14 +187,19 @@
           <img class="activator" src="./img/card_bg3.jpg">
         </div>
         <div class="card-content">
-          <span class="card-title activator"><i class="material-icons right">more_vert</i>Know When to Roll Your Own or Add a Tool to Your Toolbox</span>
+          <span class="card-title activator"><i class="material-icons right">more_vert</i>Know When to Roll Your Own or
+            Add a Tool to Your Toolbox</span>
         </div>
         <div class="card-reveal">
-          <span class="card-title">Know When to Roll Your Own or Add a Tool to Your Toolbox<i class="material-icons right">close</i></span>
+          <span class="card-title">Know When to Roll Your Own or Add a Tool to Your Toolbox<i
+              class="material-icons right">close</i></span>
           <div class="divider"></div>
-          <p class="article_summary">By no means have I seen everything there is to see in the world of development, but I have been around long enough to
-          see the change from needing a single database which housed all your data, to this world where there’s SO MUCH data that
-          you couldn’t possibly store it all in a single database, on a single server, or in many cases, not a dozen servers.</p>
+          <p class="article_summary">By no means have I seen everything there is to see in the world of development, but
+            I have been around long enough to
+            see the change from needing a single database which housed all your data, to this world where there’s SO
+            MUCH data that
+            you couldn’t possibly store it all in a single database, on a single server, or in many cases, not a dozen
+            servers.</p>
         </div>
         <div class="card-action">
           <a href="#" class="card_link">Read More</a>
@@ -201,17 +211,21 @@
           <img class="activator" src="./img/card_bg4.jpg">
         </div>
         <div class="card-content">
-          <span class="card-title activator"><i class="material-icons right">more_vert</i>My 2020 (Dev|Re)solutions</span>
+          <span class="card-title activator"><i class="material-icons right">more_vert</i>My 2020
+            (Dev|Re)solutions</span>
         </div>
         <div class="card-reveal">
           <span class="card-title">My 2020 (Dev|Re)solutions<i class="material-icons right">close</i></span>
           <div class="divider"></div>
-          <p class="article_summary">New Year’s is my favorite holiday because I find the notion of periodic renewal invigorating. Let that old lasagna be
-          forgot, I want to move forward! Overall, I was pretty happy with how my technical skills progressed last year, but I
-          think I can do better. Much better.</p>
+          <p class="article_summary">New Year’s is my favorite holiday because I find the notion of periodic renewal
+            invigorating. Let that old lasagna be
+            forgot, I want to move forward! Overall, I was pretty happy with how my technical skills progressed last
+            year, but I
+            think I can do better. Much better.</p>
           <p class="article_summary">
-          This year I’m done trying to micromanage my future with limited information. I want to keep things simple by setting a
-          high level focus and prioritizing habits over static goals.</p>
+            This year I’m done trying to micromanage my future with limited information. I want to keep things simple by
+            setting a
+            high level focus and prioritizing habits over static goals.</p>
         </div>
         <div class="card-action">
           <a href="#" class="card_link">Read More</a>
@@ -220,8 +234,8 @@
     </div>
   </section>
 
-<section id="search_field">
-        <h4 class="other_titles">Search Coding Blocks</h4>
+  <section id="search_field">
+    <h5 class="sidebar_titles">Search Coding Blocks</h5>
 
     <nav>
       <div class="nav-wrapper">
@@ -234,14 +248,26 @@
         </form>
       </div>
     </nav>
-</section>
+  </section>
 
-<section id="affiliate_field">
-          <h4 class="other_titles">Support the Show</h4>
-<div>
-  <h4>Here is the affiliate link LOL</h4>
-</div>
-</section>
+  <section id="affiliate_field">
+    <h5 class="sidebar_titles">Support the Show</h5>
+    <div id="p_logo_div">
+      <img src="./img/p_logo.png" alt="p_logo" id="p_logo">
+    </div>
+  </section>
+
+  <section id="affiliate_field">
+    <h5 class="sidebar_titles">Sponsor Slot</h5>
+    <div id="j_logo_div">
+      <img src="./img/j_logo.png" alt="j_logo" id="j_logo">
+    </div>
+  </section>
+
+  <section id="review_div">
+        <h4 class="other_titles">Our Podcasts Reviews:</h4>
+
+  </section>
 
 
   </div>
