--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -21,7 +21,7 @@
         </div>
         <div class="nav-content">
             <ul class="tabs tabs-transparent row">
-                <li class="tab col s2 active"><a href="../index.html#home" class="active">Home</a></li>
+                <li class="tab col s2 active"><a href="../index.html" class="active">Home</a></li>
                 <li class="tab col s2"><a href="../index.html#podcasts">Podcasts</a></li>
                 <li class="tab col s2"><a href="../index.html#videos">Videos</a></li>
                 <li class="tab col s2"><a href="../index.html#tipsandtricks">Tips and Tricks</a></li>
